Sort headers for iteration

Fetch requires [1] that "the value pairs to iterate over are the
return value of running sort and combine with the header list", which
is to say we don't simply iterate over the internal data of Headers
but make a sorted (and combined) copy [2]. This manifested in some
failing imported cache tests that were sensitive to the order.

This CL implements making a copy and sorting the list for iteration;
it does not implement combining[3]. So not perfect but an incremental
improvement.

[1] https://fetch.spec.whatwg.org/#headers-class
[2] https://fetch.spec.whatwg.org/#concept-header-list-sort-and-combine
[3] https://fetch.spec.whatwg.org/#concept-header-value-combined

BUG=667376,670439
R=yhirano@chromium.org

Review-Url: https://codereview.chromium.org/2542073005
Cr-Commit-Position: refs/heads/master@{#436147}

Former-commit-id: abbafbc0bacfca5beada1e3d1a5299569e0a5262